--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@
 name: LoadAllWorlds
 version: 1.1.3
 main: koningcool\loadallworlds\Main
-api: 4.2.6
+api: 5.0.0
 
 commands:
   loadworlds:
@@ -16,10 +16,10 @@ commands:
 permissions:
   loadallworlds.loadworlds.command:
     description: "Allows the user to run the command"
-    default: true
+    default: op
 
   loadallworlds.command:
     description: "Allows the user to run the command"
-    default: true
+    default: op
 
 ...
